[metadata]
name = botconfig
description = It is a bot config
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Beasley and Chris Hirsch
author_email = chris@base2technology.com
url = https://github.com/raptacon/botconfig
license = BSD-3-Clause
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pytest>=3.9
    pytest-reraise
    pint>=0.11.0

setup_requires =
    setuptools_scm > 6
python_requires = >=3.8

[options.entry_points]
robotpy =
    add-tests = raptacon3200.mains.cli_add_tests:PyFrcAddTests
    coverage = raptacon3200.mains.cli_coverage:PyFrcCoverage
    create-physics = raptacon3200.mains.cli_create_physics:PyFrcCreatePhysics
    profiler = raptacon3200.mains.cli_profiler:PyFrcProfiler
    sim = raptacon3200.mains.cli_sim:PyFrcSim
    test = raptacon3200.mains.cli_test:PyFrcTest
